--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@tensorflow/tfjs": "^3.19.0",
+    "@tensorflow/tfjs-react-native": "^0.8.0",
     "expo": "~46.0.8",
+    "expo-camera": "~12.3.0",
+    "expo-gl": "~11.4.0",
+    "expo-gl-cpp": "~11.4.0",
+    "expo-media-library": "~14.2.0",
+    "expo-sharing": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.4",
-    "expo-camera": "~12.3.0",
-    "expo-sharing": "~10.3.0",
-    "expo-media-library": "~14.2.0"
+    "react-native": "0.69.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
