--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "expo-media-library": "~14.2.0",
     "expo-sharing": "~10.3.0",
     "expo-status-bar": "~1.4.0",
+    "i": "^0.3.7",
+    "npm": "^8.18.0",
     "react": "18.0.0",
-    "react-native": "0.69.4"
+    "react-native": "0.69.4",
+    "react-native-fs": "^2.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
